# NeuXus

./: mne_lsl.ipynb  pyproject.toml  regression.ipynb  requirements.txt  test.py
.github/workflows/: pytest.yaml
neuxus/: chunks.py  conftest.py  pipeline.py
neuxus/commands/: run.py
neuxus/nodes/: correct.py  io.py
