[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {name = 'S.Legeay'},
  {name = 'A.Vourvopoulos'},
  {email = 'victor.ferat@live.fr', name = 'Victor Férat'}
]

classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'mne',
  'joblib',
  'pandas',
  'numba',
  'pylsl',
  'pynput',
  'pyserial',
  'pyxdf',
  'packaging',
  'psutil',
]
description = 'A flexible software to build real-time pipeline for EEG processing'
keywords = [
  'python',
  'neuxus',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'victor.ferat@live.fr', name = 'Victor Férat'},
]
name = 'neuxus'
readme = 'README.md'
requires-python = '>=3.12'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'neuxus[build]',
  'neuxus[doc]',
  'neuxus[stubs]',
  'neuxus[style]',
  'neuxus[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'neuxus[all]',
]
stubs = [
  'isort',
  'mypy',
  'ruff>=0.1.8',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
neuxus = 'neuxus.commands.run:run_pipeline'

[project.urls]
documentation = 'https://github.com/melhk/NeuXus'
homepage = 'https://github.com/melhk/NeuXus'
source = 'https://github.com/melhk/NeuXus'
tracker = 'https://github.com/melhk/NeuXus'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/neuxus/_version.py',
  '**/neuxus/commands/*',
  '**/neuxus/utils/_fixes.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'doc/*',
  'examples/*',
  'tutorials/*',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!__init__|test_).*\.py'
match-dir = '^neuxus.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'doc',
]
line-length = 88
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'E', 'F', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['neuxus*tests']
include = ['neuxus*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true